#2 Added an enable option for Custom Spawn System

--- a/KaasCore/src/main/resources/config.yml
+++ b/KaasCore/src/main/resources/config.yml
@@ -2,6 +2,7 @@
 # Location where new players will be teleported on first join
 
 spawn-location:
+  enabled: false       # Whether this feature is enabled
   world: "world"       # The world name
   x: 0                 # X coordinate
   y: 999               # Y coordinate
